# CovidSimulator

./: README.md
AssigmentFive/: CMakeLists.txt  Element.h  ElementImp.h  FileNotFound.cpp  FileNotFound.h  InvalidDefinition.cpp  InvalidDefinition.h  PopulationDefinition.cpp  PopulationDefinition.h  Setup.cpp  Setup.h  Simulator.cpp  Simulator.h  init.txt  main.cpp  output.txt
